--- a/waterGame.html
+++ b/waterGame.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>물 붓기 게임 </title>
+    <title>물 정렬 퍼즐 게임 </title>
     <link rel="stylesheet" href="style.css">
     <!-- <script src="https://code.jquery.com/jquery-latest.min.js"></script> -->
 </head>
